--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,3 @@
 [build-system]
-requires = ["setuptools", "wheel", "scikit-build", "cmake>=3.9", "numpy>=1.21"]
+requires = ["setuptools", "wheel", "scikit-build", "fypp", "cmake>=3.9", "numpy>=1.21"]
 build-backend = "setuptools.build_meta"
