--- a/src/mobbrmsd/CMakeLists.txt
+++ b/src/mobbrmsd/CMakeLists.txt
@@ -13,6 +13,16 @@ FetchContent_Declare(
   )
 FetchContent_MakeAvailable(forbar)
 
+if(CMAKE_BUILD_TYPE MATCHES "Debug")
+  FetchContent_Declare(
+    unittest
+    GIT_REPOSITORY https://github.com/yymmt742/unittest
+    GIT_TAG origin/main
+    GIT_PROGRESS TRUE
+    )
+  FetchContent_MakeAvailable(unittest)
+endif()
+
 add_subdirectory(mobbrmsd_2d)
 add_subdirectory(mobbrmsd_3d)
 add_subdirectory(mobbrmsd)
