--- a/src/mobbrmsd/mobbrmsd_2d/CMakeLists.txt
+++ b/src/mobbrmsd/mobbrmsd_2d/CMakeLists.txt
@@ -75,7 +75,6 @@ install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../include
         DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${TARGET_2D}")
 
 if(CMAKE_BUILD_TYPE MATCHES "Debug")
-  find_package(purelapack REQUIRED)
 
   add_executable(test_gemm_2d)
   target_sources(
@@ -113,7 +112,8 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
   target_include_directories(test_rotation_2d
                              PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
   target_link_libraries(test_rotation_2d PRIVATE unittest)
-  target_link_libraries(test_rotation_2d PRIVATE purelapack)
+  target_link_libraries(test_rotation_2d PRIVATE blas)
+  target_link_libraries(test_rotation_2d PRIVATE lapack)
   add_test(NAME test_rotation_2d COMMAND test_rotation_2d)
 
   add_executable(test_c_matrix_2d)
@@ -220,7 +220,6 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
   target_include_directories(test_mobbrmsd_2d
                              PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
   target_link_libraries(test_mobbrmsd_2d PRIVATE unittest)
-  target_link_libraries(test_mobbrmsd_2d PRIVATE purelapack)
   target_link_libraries(test_mobbrmsd_2d PRIVATE ${OpenMP_Fortran_LIB_NAMES})
   add_test(NAME test_mobbrmsd_2d COMMAND test_mobbrmsd_2d 0)
 endif()
